test/C/src/concurrent/failing/WatchdogMultiple.lf
/**
 * This tests that the order of reactions triggered when a watchdog expires is as expected.
 * @author Erling Rennemo Jellum
 */
target C

reactor WithWatchdog {
  state cnt: int = 0

  watchdog watch(10 msec) {=  =}

  reaction(startup) -> watch {=
    lf_watchdog_start(watch, 0);
  =}

  reaction(watch) {=
    self->cnt++;
    if (lf_time_logical_elapsed() != MSEC(10)) {
      lf_print_error_and_exit("Watchdog handler triggered at wrong tag.");
    }
  =}

  reaction(shutdown) {=
    if (self->cnt != 1) {
      lf_print_error_and_exit("Watchdog did not timeout");
    }
  =}
}

main reactor {
  w1 = new WithWatchdog()
  w2 = new WithWatchdog()
  timer t(2 sec)

  reaction(startup) {=
    if (NUMBER_OF_WATCHDOGS != 2) {
      lf_print_error_and_exit("NUMBER_OF_WATCHDOGS was %d", NUMBER_OF_WATCHDOGS);
    }
  =}

  reaction(t) {=  =}
}
